Rendering volume scatter with GPU OpenCL comes to an halt after a few seconds #50985

Closed
opened 2017-03-17 18:45:13 +01:00 by bigbad · 9 comments

System Information
Operating system: Win 10 64-bit Home Edition
Graphics card: AMD ASUS R9 390X 8GB, latest drivers

Blender Version
Broken: 2.78 9d873fc

Short description of error
Rendering volume scatter with GPU OpenCL comes to an halt after a few tiles. It just stops to render but the GPU Usage hovers about 50%-60% when it stops to render.

bug_lightscatter.png

Exact steps for others to reproduce the error

Use the BMW27.blend file from benchmark. Add a large cube that engulfs the whole scene and add a volume scatter shader in Volume. Use OpenCL GPU. Press F12. Blend updated for testing.

BMW27 bug light scatter.blend

**System Information** Operating system: Win 10 64-bit Home Edition Graphics card: AMD ASUS R9 390X 8GB, latest drivers **Blender Version** Broken: 2.78 9d873fc **Short description of error** Rendering volume scatter with GPU OpenCL comes to an halt after a few tiles. It just stops to render but the GPU Usage hovers about 50%-60% when it stops to render. ![bug_lightscatter.png](https://archive.blender.org/developer/F512322/bug_lightscatter.png) **Exact steps for others to reproduce the error** Use the BMW27.blend file from benchmark. Add a large cube that engulfs the whole scene and add a volume scatter shader in Volume. Use OpenCL GPU. Press F12. Blend updated for testing. [BMW27 bug light scatter.blend](https://archive.blender.org/developer/F512325/BMW27_bug_light_scatter.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bigbad

Added subscriber: @bigbad

Added subscriber: @TomG

Added subscriber: @TomG

Added subscriber: @nirved-1

Added subscriber: @nirved-1

Cause is unsafe compiler options. Changing it to a safe one does performance penalty 1%.
P457: Fix for #50985

diff --git a/intern/cycles/device/opencl/opencl_base.cpp b/intern/cycles/device/opencl/opencl_base.cpp
index 0328dfe..c3a499d 100644
--- a/intern/cycles/device/opencl/opencl_base.cpp
+++ b/intern/cycles/device/opencl/opencl_base.cpp
@@ -612,7 +612,7 @@ void OpenCLDeviceBase::shader(DeviceTask& task)
 
 string OpenCLDeviceBase::kernel_build_options(const string *debug_src)
 {
-	string build_options = "-cl-fast-relaxed-math ";
+	string build_options = "-cl-no-signed-zeros -cl-mad-enable ";
 
 	if(platform_name == "NVIDIA CUDA") {
 		build_options += "-D__KERNEL_OPENCL_NVIDIA__ "
Cause is unsafe compiler options. Changing it to a safe one does performance penalty 1%. [P457: Fix for #50985](https://archive.blender.org/developer/P457.txt) ``` diff --git a/intern/cycles/device/opencl/opencl_base.cpp b/intern/cycles/device/opencl/opencl_base.cpp index 0328dfe..c3a499d 100644 --- a/intern/cycles/device/opencl/opencl_base.cpp +++ b/intern/cycles/device/opencl/opencl_base.cpp @@ -612,7 +612,7 @@ void OpenCLDeviceBase::shader(DeviceTask& task) string OpenCLDeviceBase::kernel_build_options(const string *debug_src) { - string build_options = "-cl-fast-relaxed-math "; + string build_options = "-cl-no-signed-zeros -cl-mad-enable "; if(platform_name == "NVIDIA CUDA") { build_options += "-D__KERNEL_OPENCL_NVIDIA__ " ```
Author

Thanks Hristo for looking into that and giving an answer and a solution. Is there a way to enable safe compiler options from the terminal or within blender? Or is it hardcoded?

Thanks Hristo for looking into that and giving an answer and a solution. Is there a way to enable safe compiler options from the terminal or within blender? Or is it hardcoded?
Hristo Gueorguiev was assigned by Aaron Carlisle 2017-04-11 01:05:41 +02:00

This issue was referenced by blender/cycles@32af06f8ba

This issue was referenced by blender/cycles@32af06f8ba756b0e5e40b1fcd7a57bb18fe69cc8

This issue was referenced by e91dc3a97c

This issue was referenced by e91dc3a97c0ce1951ce76790210f7197ab9e014a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50985
No description provided.